@@ -1,3 +1,12 @@
+<?php
+/**
+ * @version	
+ * @package		Joomla.Administrator
+ * @subpackage	Modules
+ * @copyright	Copyright (C) 2005 - 2009 Open Source Matters, Inc. All rights reserved.
+ * @license		GNU General Public License version 2 or later; see LICENSE.txt
+ */
+?>
 <?php defined('_JEXEC') or die; ?>
 
 <?php
@@ -122,6 +131,7 @@ foreach ($this->orders2 as $k=>$items) {
 				var n = e.options.length;
 				for (i = 0; i < n; i++) {
 					e.options[i].disabled = false;
+					e.options[i].selected = true;				
 				}
 			}
 		</script>
