@@ -1,14 +1,0 @@
-# $Id: en-GB.tpl_beez.ini 1.5.0 2007-04-13 11:55:43 ff 0$
-# author Joomla! Project
-# copyright Copyright (C) 2005 - 2009 Open Source Matters. All rights reserved.
-# license GNU General Public License version 2 or later; see LICENSE.txt
-# Note : All ini files need to be saved as UTF-8 - No BOM
-HEADER LEVEL COMPONENT=Header level Component
-HEADER LEVEL PAGE TITLE=Header level page title
-H1=H1
-H2=H2
-H3=H3
-H4=H4
-H5=H5
-BEEZ=Beez
-ACCESSIBLE TEMPLATE FOR JOOMLA 1.5=Accessible template for Joomla! 1.5
