@@ -1,15 +1,0 @@
-# $Id$
-# Joomla! Project
-# Copyright (C) 2005 - 2009 Open Source Matters. All rights reserved.
-# License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
-# Note : All ini files need to be saved as UTF-8 - No BOM
-
-ADMINISTRATION TEMPLATE FOR JOOMLA! 1.5=Khepri is a fresh new template for the Joomla! Administrator Back-end. The clean design of this template makes it very lightweight and fast. <br /><br />NuoveXT Icons: Copyright Alexandre Moore (Saki), license GNU General Public License (GPL)
-ENABLE/DISABLE ROUNDED CORNER EFFECT=Enable or disable the rounded corner effect for the template.
-HEADER COLOR=Header Color
-KHEPRI=Khepri
-SHOW SITE NAME=Show Site Name
-SHOW THE SITE NAME IN THE TEMPLATE HEADER=Show the site name in the template header
-THE COLOR OF THE BAR UNDER THE HEADER=The color of the bar under the header
-USE ROUNDED CORNERS=Use Rounded Corners
-
