@@ -17,8 +17,8 @@
 		<field
 			name="id"
 			type="modal_article"
-			label="Select Article"
+			label="Select_Article_label"
 			group="request"			
-			description="An article" />
+			description="Select_article_desc" />
 	</fields>
 </metadata>
