@@ -67,3 +67,8 @@ USERS_PROFILE_EMAIL2_LABEL=Confirm E-mail Address:
 USERS_PROFILE_EMAIL2_DESC=Confirm your e-mail address
 USERS_PROFILE_EMAIL2_MESSAGE=The e-mail addresses you entered do not match. Please enter your e-mail address in the e-mail address field and confirm your entry by entering it in the confirm e-mail field.
 
+USERS_PROFILE_CUSTOM_LEGEND=Profile Custom Legend
+USERS_EDIT_PROFILE=Edit Profile
+USERS_PROFILE_CORE_LEGEND=Legend
+USERS_PROFILE_REGISTERED_DATE_LABEL=Registered Date
+USERS_PROFILE_VALUE_NOT_FOUND=Value Not Found
