@@ -331,3 +331,20 @@ YOU MAY NOT BE ABLE TO VISIT THIS PAGE BECAUSE OF:=You may not be able to visit 
 YOU MUST LOGIN FIRST=You must log in first
 YOU NEED TO LOGIN.=You need to log in.
 YOUR=Your
+
+
+JFIELD_ACCESS_DESC=Access level for this content
+JFIELD_ACCESS_LABEL=Access
+JFIELD_CATEGORY_DESC=Category 
+JFIELD_CATEGORY_LABEL=Category
+JFIELD_META_DESCRIPTION_DESC=Meta data description
+JFIELD_META_DESCRIPTION_LABEL=Description
+JFIELD_META_KEYWORDS_DESC=Keywords describing the content
+JFIELD_META_KEYWORDS_LABEL=Keywords
+JFIELD_ORDERING_DESC=Ordering of the article within the category
+JFIELD_ORDERING_LABEL=Ordering
+JFIELD_PUBLISHED_DESC=Set publication state
+JFIELD_PUBLISHED_LABEL=Published
+JFIELD_TITLE_DESC=Title for the 
+JFIELD_TITLE_LABEL=Title
+
