@@ -27,7 +27,11 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
-10-Nov-2009
+10-Nov-2009 Elin Waring
+# Miscellaneous cleanup in weblinks, newsfeed, content, language strings
+# Tidy up com_menus, delete beez and khepri ini files
+
+10-Nov-2009 Mark Dexter
 # Minor HTML validation issue in mod_login
 
 05-Nov-2009 Ron Severdia
